# prop-logic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: formula-truth-table.rs  gar.rs  gar2.rs  truth-table.rs  truth_table.rs
src/: arity.rs  formula.rs  lib.rs  ops.rs  truth_table.rs  utils.rs
src/connective/: and.rs  converse_imply.rs  converse_nimply.rs  evaluation.rs  falsity.rs  id.rs  imply.rs  mod.rs  nand.rs  neg.rs  nimply.rs  nor.rs  notation.rs  ops.rs  or.rs  ordering.rs  priority.rs  proj.rs  properties.rs  storage.rs  traits.rs  truth.rs  truth_table.rs  xnor.rs  xor.rs
src/connective/functions/: and.rs  converse_imply.rs  converse_nimply.rs  falsity.rs  id.rs  imply.rs  mod.rs  nand.rs  neg.rs  nimply.rs  nor.rs  or.rs  proj.rs  ternary.rs  truth.rs  xnor.rs  xor.rs
src/connective/functions/binary/: and.rs  converse_imply.rs  converse_nimply.rs  imply.rs  mod.rs  nand.rs  nimply.rs  nor.rs  or.rs  proj.rs  xnor.rs  xor.rs
src/formula/: assign.rs  atom.rs  connective.rs  eval.rs  formula.rs  lit.rs  mod.rs  ops.rs  var.rs
src/formula/general/: arbitrary.rs  connective.rs  eval.rs  formula.rs  mod.rs  ops.rs  truth_table.rs
src/formula/general/equivalences/: absorption.rs  canonical.rs  constant.rs  distrib.rs  elimination.rs  eq.rs  mod.rs  neg.rs  prop_test.rs  sort.rs  traits.rs  xor.rs
src/formula/normal_forms/: anf.rs  cnf.rs  dnf.rs  error.rs  lit.rs  mod.rs  nnf.rs  traits.rs
src/utils/: dependent_array.rs  dyn_eq.rs  mod.rs  operation.rs  upcast.rs  vec.rs  zst.rs
