[package]
name = "prop-logic"
version = "0.1.0"
authors = ["Ivan L <tsionyx@gmail.com>"]
edition = "2021"
repository = "https://github.com/tsionyx/prop-logic"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
dyn-clone = "1.0"
