[package]
name = "prop-logic"
version = "0.1.0"
authors = ["Ivan L <tsionyx@gmail.com>"]
edition = "2021"
repository = "https://github.com/tsionyx/prop-logic"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
dyn-clone = "1.0"
auto_impl = "1.2"
derive-where = "1.2"



# https://doc.rust-lang.org/nightly/cargo/reference/manifest.html#the-lints-section

[lints.rust]
# do not warn on older Rust versions
unknown_lints = "allow"

# The following list was generated with the command:
#   $ rustc -W help | grep ' allow ' | awk '{print $1}' | tr - _ | sort | xargs -I{} echo '{} = "warn"' | xclip -sel clip
#
# It is also available for the latest version of rustc at:
#   https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
absolute_paths_not_starting_with_crate = "warn"
# deprecated in 1.81
#box_pointers = "warn"
closure_returning_async_block = "warn"
deprecated_in_future = "warn"
deprecated_safe = { level = "warn", priority = -1 }
# using new expr is Ok
edition_2024_expr_fragment_specifier = "allow"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
fuzzy_provenance_casts = "warn"
impl_trait_overcaptures = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
lossy_provenance_casts = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
multiple_supertrait_upcastable = "warn"
must_not_suspend = "warn"
non_ascii_idents = "warn"
non_exhaustive_omitted_patterns = "warn"
non_local_definitions = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# conflicts with the `clippy::redundant_pub_crate`
unreachable_pub = "allow"
unsafe_attr_outside_unsafe = "warn"
# NO UNSAFE
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
# ATTENTION: produces false-positive warning
#  when [dev-dependencies] that are used in test or examples
#  but not used in the main library code.
#
#  https://github.com/rust-lang/rust/issues/95513
unused_crate_dependencies = "allow"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.clippy]
mem_forget = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# suppress some pedantic warnings
must_use_candidate = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
